<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>org.fagu</groupId>
	<artifactId>fmv-parent</artifactId>
	<version>0.6.0</version>
	<packaging>pom</packaging>
	<name>fmv-parent</name>
	<description>FMV parent</description>

 	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	
	 
	<scm>
		<connection>scm:git:https://github.com/f-agu/fmv.git</connection>
		<developerConnection>scm:git:https://github.com/f-agu/fmv.git</developerConnection>
		<tag>0.6.0</tag>
	</scm>
	
	<repositories>
		<repository>
			<id>fagu</id>
			<url>http://fagu.free.fr/mvnrepo/fmv</url>
		</repository>
	</repositories>
	
	<modules>
		<module>fmv-cli</module>
		<module>fmv-core</module>
		<module>fmv-ffmpeg</module>
		<module>fmv-imagemagick</module>
		<module>fmv-media</module>
		<module>fmv-mymedia</module>
		<module>fmv-soft</module>
		<module>fmv-soft-auto</module>
		<module>fmv-utils</module>
		<module>fmv-version</module>
    </modules>
  
  	<developers>
		<developer>
			<name>Fabrice Agu</name>
			<email>fagu@free.fr</email>
			<timezone>GMT+1</timezone>
		</developer>
	</developers>
       
	<properties>
		<project.scm.id>github</project.scm.id>
		<maven.build.timestamp.format>yyyyMMdd.HHmm</maven.build.timestamp.format>
		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<distributionManagement>
		<repository>
			<id>ftp-repository</id>
			<url>ftp://ftpperso.free.fr/mvnrepo/fmv/</url>
		</repository>
	</distributionManagement>
    
   	<build>
   		<extensions>
   			<extension>
   				<groupId>org.apache.maven.wagon</groupId>
   				<artifactId>wagon-ftp</artifactId>
   				<version>1.0-beta-6</version>
   			</extension>
   		</extensions>
   	
   	    <resources>
   	        <resource>
   	            <directory>src/main/resources</directory>
   	            <filtering>true</filtering>
   	        </resource>
   	    </resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.18.1</version>
				<configuration>
					<argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
					</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
						    <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
    						<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<useReleaseProfile>false</useReleaseProfile>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<configuration>
					<licenseName>fmv-license</licenseName>
					<licenseResolver>http://fagu.free.fr/fmv/license</licenseResolver>
					<organizationName>fagu</organizationName>
					<inceptionYear>2014</inceptionYear>
				</configuration>
				<executions>
					<execution>
						<id>first</id>
						<goals>
							<goal>update-file-header</goal>
						</goals>
						<phase>process-sources</phase>
						<configuration>
							<licenseName>apache_v2</licenseName>
							<roots>
								<root>src/main/java</root>
								<root>src/test</root>
							</roots>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>
											org.codehaus.mojo
										</groupId>
										<artifactId>
											license-maven-plugin
										</artifactId>
										<versionRange>
											[1.7,)
										</versionRange>
										<goals>
											<goal>
												update-file-header
											</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

   	
	<dependencyManagement>
	    <dependencies>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-exec</artifactId>
				<version>1.3</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.5</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.5</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.10</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-collections4</artifactId>
				<version>4.1</version>
			</dependency>
			<dependency>
		        <groupId>net.sf.json-lib</groupId>
		        <artifactId>json-lib</artifactId>
		        <version>2.4</version>
		        <type>jar</type>
		        <classifier>jdk15</classifier>
		    </dependency>
						
			<!-- Test U -->
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<type>jar</type>
				<scope>test</scope>
				<version>4.12</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>1.10.19</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-module-junit4</artifactId>
				<version>1.6.6</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.powermock</groupId>
				<artifactId>powermock-api-mockito</artifactId>
				<version>1.6.6</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

</project>

